homeworks/kyiashko/lesson-8/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: hw08
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
