homeworks/kyiashko/lesson-8/test_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: hw08
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - port: 8081
      targetPort: 8080
