homeworks/kyiashko/lesson-8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
  namespace: hw08
spec:
  tls:
    - hosts:
        - app.local
      secretName: course-app-tls
  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app
                port:
                  number: 8080
